[tool.poetry]
name = "chart_handler"
version = "0.1.0"
description = ""
authors = ["studio3104 <studio3104.com@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.4"
pynamodb = "^5.1.0"
bitflyer = {git = "https://github.com/RainMakerProject/bitFlyer.git", rev = "main"}
mplfinance = "^0.12.7-alpha.17"
scipy = "^1.7.2"
TA-Lib = "^0.4.21"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
